# SoccerCars

./: .gitignore  .gitmodules
Cars/ref/: Interface.csv
FMS/: CMakeLists.txt  ToDo.txt
FMS/forms/: Main Menu.ui  Match Settings.ui
FMS/inc/: CarOptions.h  CarOptionsWidget.h  CarOptionsWidget.ui  CarSettings.h  CarSettings.ui  CmdOptions.h  Connect.h  Connect.ui  CountdownTimer_Qt.h  Diagnostics.h  Diagnostics.ui  Diagonostics.ui  MainMenu.h  MainMenu.ui  MatchOptions.h  MatchSettings.h  MatchSettings.ui  StopCar.h  StopCar.ui  Stop_Car.ui  UsefulTypes.h
FMS/ref/: Interface.csv
FMS/res/: resources.qrc
FMS/src/: CarOptions.cpp  CarOptionsWidget.cpp  CarSettings.cpp  CmdOptions.cpp  Diagnostics.cpp  MainMenu.cpp  MatchOptions.cpp  MatchSettings.cpp  StopCar.cpp  main.cpp
Field/ref/: Interface.csv
